--- a/client/nav.jade
+++ b/client/nav.jade
@@ -1,56 +1,55 @@
 template(name='nav')
-    .ui.inverted.borderless.attached.large.menu.topnav
+    //- .ui.inverted.borderless.attached.large.menu.topnav
         //- a.toggle_sidebar.icon.item.sidebar_on
         //-     i.large.sidebar.icon
-        if is_loading
-            .icon.item
-                i.big.grey.loading.yin.yang.icon
-        else
-            a.icon.item.set_model(href='/m/model' class="{{isActivePath '/m/model'}}")
-                i.large.home.icon
-            each bookmarked_models
-                a.icon.item.set_bookmarked_model(href="/m/#{slug}" class="{{isActivePath '/m/#{slug}'}}" title=title)
-                    i.large.icon(class=icon)
-                    //- |#{title}
-            //- a.icon.item(href='/users' class="{{isActivePath '/users'}}" title='Users')
-            //-     i.large.users.icon
-            //- a.icon.item(href='/frontdesk' class="{{isActivePath '/frontdesk'}}" title='Staff')
-            //-     i.large.briefcase.icon
-            a.icon.item(href='/checkin' class="{{isActivePath '/checkin'}}" title='Health Club')
-                i.large.clinic.medical.icon
-        .right.menu
-            if currentUser
-                unless logging_out
-                    //- .ui.simple.dropdown.icon.item(href="/user/#{currentUser.username}/notifications" class="{{isActivePath '/messages'}}")
-                    //-     i.alarm.icon
-                    //-     .menu
-                    //-         each notifications
-                    //-             .item #{text}
-                    a.icon.item(href="/user/#{currentUser.username}" class="{{isActiveRoute regex='profile'}}")
-                        i.large.mail.icon(class=mail_icon_class title="#{unread_count} Unread")
-                    a.icon.item(href="/chat" class="{{isActivePath '/chat'}}")
-                        i.large.chat.icon
-                    if is_admin
-                        a.icon.item(href='/admin' class="{{isActivePath '/admin'}}")
-                            i.large.shield.icon
-                    //- if is_dev
-                    //-     a.icon.item(href='/m/model' class="{{isActivePath '/m/model'}}")
-                    //-         i.large.yin.yang.icon
-                    a.icon.item(href="/user/#{currentUser.username}" class="{{isActiveRoute regex='user_chat'}}")
-                        if currentUser.image_id
-                            img.ui.avatar.image(src="{{c.url currentUser.image_id width=100 height=100 gravity='face' crop='fill'}}")
-                        else
-                            i.user.large.icon
-                        //- | #{currentUser.username}
-                //- if logging_out
-                //-     .icon.item
-                //-         i.large.loading.refresh.icon
-                //- else
-                //-     a#logout.ui.mobile.hidden.icon.item(href='#' title='Log Out')
-                //-         i.sign.out.large.icon
+        
+    if is_loading
+        i.huge.grey.loading.yin.yang.icon
+    else
+        a.ui.basic.white.inverted.icon.circular.big.button.set_model(href='/m/model' class="{{isActivePath '/m/model'}}")
+            i.large.home.icon
+        each bookmarked_models
+            a.ui.basic.white.inverted.icon.circular.big.button.set_bookmarked_model(href="/m/#{slug}" class="{{isActivePath '/m/#{slug}'}}" title=title)
+                i.large.icon(class=icon)
+                //- |#{title}
+        a.ui.basic.white.inverted.icon.circular.big.button(href='/users' class="{{isActivePath '/users'}}" title='Users')
+            i.large.users.icon
+        //- a.ui.basic.white.inverted.icon.circular.big.button(href='/frontdesk' class="{{isActivePath '/frontdesk'}}" title='Staff')
+        //-     i.large.briefcase.icon
+        a.ui.basic.white.inverted.icon.circular.big.button(href='/checkin' class="{{isActivePath '/checkin'}}" title='Health Club')
+            i.large.clinic.medical.icon
+        if currentUser
+            unless logging_out
+                //- .ui.simple.dropdown.ui.basic.white.inverted.icon.circular.big.button(href="/user/#{currentUser.username}/notifications" class="{{isActivePath '/messages'}}")
+                //-     i.alarm.icon
+                //-     .menu
+                //-         each notifications
+                //-             .ui.circular.button #{text}
+                a.ui.basic.white.inverted.icon.circular.big.button(href="/user/#{currentUser.username}" class="{{isActiveRoute regex='profile'}}")
+                    i.large.mail.icon(class=mail_icon_class title="#{unread_count} Unread")
+                a.ui.basic.white.inverted.icon.circular.big.button(href="/chat" class="{{isActivePath '/chat'}}")
+                    i.large.chat.icon
+                if is_admin
+                    a.ui.basic.white.inverted.icon.circular.big.button(href='/admin' class="{{isActivePath '/admin'}}")
+                        i.large.shield.icon
+                //- if is_dev
+                //-     a.ui.basic.white.inverted.icon.circular.big.button(href='/m/model' class="{{isActivePath '/m/model'}}")
+                //-         i.large.yin.yang.icon
+                a.ui.basic.white.inverted.icon.circular.big.button(href="/user/#{currentUser.username}" class="{{isActiveRoute regex='user_chat'}}")
+                    if currentUser.image_id
+                        img.ui.avatar.image(src="{{c.url currentUser.image_id width=100 height=100 gravity='face' crop='fill'}}")
+                    else
+                        i.user.large.icon
+                    //- | #{currentUser.username}
+            if logging_out
+                .ui.basic.white.inverted.icon.circular.big.button
+                    i.large.loading.refresh.icon
             else
-                a.ui.icon.item(href='/login' title='Login') 
-                    i.sign.in.large.icon
+                a#logout.ui.mobile.hidden.ui.basic.white.inverted.icon.circular.big.button(href='#' title='Log Out')
+                    i.sign.out.large.icon
+        else
+            a.ui.ui.basic.white.inverted.icon.circular.big.button(href='/login' title='Login') 
+                i.sign.in.large.icon
 
 
 template(name='sidebar')
