inverted selector buttons, remove accordion from facets

--- a/client/client.jade
+++ b/client/client.jade
@@ -23,8 +23,10 @@ template(name='layout')
     //- img.ui.fluid.image.banner_image(src="{{c.url 'stars_big' width=1000 height=500 crop='crop'}}")
     img.ui.fluid.image(src="{{c.url 'stars_big' width=2000}}")
     .ui.stackable.grid.profile_grid
-        .centered.row
-            +nav
+        .row
+            .sixteen.wide.center.aligned.column
+                +nav
+            //- .ui.center.aligned.basic.segment
         .row
             .sixteen.wide.column
                 #main
