--- a/client/styles.css
+++ b/client/styles.css
@@ -322,7 +322,7 @@ a {
 	overflow-x:hidden;
 	max-height:200vh;
 	/*max-height:85vh;*/
-	padding-top: 1em;
+	/* padding-top: 1em; */
 	/*padding-left: 1em;*/
 }
 
