--- a/components/delta/model_doc.jade
+++ b/components/delta/model_doc.jade
@@ -39,35 +39,37 @@ template(name='model_doc_view')
                                 | View #{model}
             .row
                 .four.wide.column
-                    // .ui.header
-                    //     a.ui.icon.button(href="/m/#{model}" title=plural)
-                    //         i.chevron.left.icon
-                    //     |View #{model}
-                    if is_admin
-                        a.ui.big.circular.icon.button(href="/m/#{model}/#{_id}/edit" title='Edit')
-                            i.blue.pencil.icon
-                        .ui.small.header Timestamp Tags
-                        each _timestamp_tags
-                            .ui.circular.label #{this}
-                    //- each model.actions
-                    //-     +Template.dynamic template=this data=current_doc
-                    div
-                    +user_list_toggle key='bookmark_ids' icon='bookmark' label='Bookmark' color='red'
-                    div
-                    +creation_info
+                    .ui.cloud.segment
+                        // .ui.header
+                        //     a.ui.icon.button(href="/m/#{model}" title=plural)
+                        //         i.chevron.left.icon
+                        //     |View #{model}
+                        if is_admin
+                            a.ui.big.circular.icon.button(href="/m/#{model}/#{_id}/edit" title='Edit')
+                                i.blue.pencil.icon
+                            .ui.small.header Timestamp Tags
+                            each _timestamp_tags
+                                .ui.circular.label #{this}
+                        //- each model.actions
+                        //-     +Template.dynamic template=this data=current_doc
+                        div
+                        +user_list_toggle key='bookmark_ids' icon='bookmark' label='Bookmark' color='red'
+                        div
+                        +creation_info
                 .twelve.wide.column.scrolling
-                    .ui.header
+                    .ui.cloud.segment
+                        .ui.header
+                            each fields
+                                if header
+                                    +Template.dynamic template=view_template 
+                            // if icon
+                            //     i.icon(class=icon)
+                            // |#{title}
                         each fields
-                            if header
-                                +Template.dynamic template=view_template 
-                        // if icon
-                        //     i.icon(class=icon)
-                        // |#{title}
-                    each fields
-                        unless header
-                            .item
-                                +Template.dynamic template=view_template 
-                    div
-                    +comments
-                    if watson
-                        +watson_view
+                            unless header
+                                .item
+                                    +Template.dynamic template=view_template 
+                        div
+                        +comments
+                        if watson
+                            +watson_view
