--- a/components/delta/model_doc.jade
+++ b/components/delta/model_doc.jade
@@ -22,24 +22,22 @@ template(name='model_doc_view')
     with current_doc
         .ui.stackable.padded.grid
             .row
-                .sixteen.wide.column
-                    .ui.breadcrumb
-                        a.section(href="/m/#{current_model.slug}" title=current_model.plural)
-                            .ui.circular.button
-                                i.icon(class=current_model.icon)
-                                |#{current_model.title}
-                        .divider
-                            i.chevron.right.icon
-                        .active.section
-                            if icon
-                                i.icon(class=icon)
-                            if title
-                                |#{title}
-                            else
-                                | View #{model}
-            .row
                 .four.wide.column
                     .ui.cloud.segment
+                        a.ui.circular.large.black.button(href="/m/#{current_model.slug}" title=current_model.plural)
+                            i.left.chevron.icon
+                            i.icon(class=current_model.icon)
+                            |#{current_model.title}
+                            //- .divider
+                            //-     i.chevron.right.icon
+                            //- .active.section
+                            //-     if icon
+                            //-         i.icon(class=icon)
+                            //-     if title
+                            //-         |#{title}
+                            //-     else
+                            //-         | View #{model}
+
                         // .ui.header
                         //     a.ui.icon.button(href="/m/#{model}" title=plural)
                         //         i.chevron.left.icon
