--- a/client/fields.jade
+++ b/client/fields.jade
@@ -112,7 +112,7 @@ template(name='image_view')
 
 template(name='image_edit')
     .ui.form
-        .field
+        .ui.inline.small.inverted.header
             if icon
                 i.grey.icon(class=icon)
             if title
@@ -121,6 +121,7 @@ template(name='image_edit')
                 |#{key}
             else
                 |#{this}            
+        .field
             if field_value
                 label Image
                 img.ui.medium.centered.rounded.image(src="{{c.url field_value height=500 gravity='face' crop='fill'}}")
@@ -138,7 +139,7 @@ template(name='image_edit')
 
 
 template(name='image_link_edit')
-    .ui.labeled.icon.fluid.input
+    .ui.fluid.input
         .ui.smoothed.label image link
         i.image.icon
         input.edit_image_link(type='link' value=field_value placeholder='image link' )
@@ -316,10 +317,10 @@ template(name='parent_view')
 
 
 template(name='phone_edit')
-    .ui.labeled.fluid.icon.input
+    .ui.fluid.input
         // if icon
         //     i.grey.icon(class=icon)
-        .ui.smoothed.label 
+        .ui.inline.inverted.header 
             if title
                 |#{title}
             else if label
@@ -351,7 +352,7 @@ template(name='phone_view')
 
 template(name='number_edit')
     div
-    .ui.labeled.icon.input
+    .ui.fluid.input
         .ui.small.inline.inverted.header
             if icon
                 i.grey.icon(class=icon)
@@ -380,7 +381,7 @@ template(name='number_view')
 
 
 template(name='date_edit')
-    .ui.labeled.icon.input
+    .ui.fluid.input
         .ui.small.inline.inverted.header
             if title
                 |#{title}
@@ -411,7 +412,7 @@ template(name='date_view')
 
 
 template(name='time_edit')
-    .ui.labeled.icon.input
+    .ui.fluid.input
         .ui.small.inline.inverted.header
             if title
                 |#{title}
@@ -456,7 +457,7 @@ template(name='datetime_view')
 
 
 template(name='array_edit')
-    .ui.labeled.icon.input
+    .ui.fluid.input
         .ui.small.inline.inverted.header
             if icon
                 i.grey.icon(class=icon)
@@ -736,7 +737,7 @@ template(name='single_user_edit')
         if field_value
             .pull_user.ui.circular.button(title='Remove User')
                 i.user.remove.icon
-                |Clear #{field_value}
+                |clear #{field_value}
     unless field_value
         .ui.input
             input#single_user_select_input(type='text' placeholder='Lookup User...')
